--- a/.github/workflows/preview-deploy.yaml
+++ b/.github/workflows/preview-deploy.yaml
@@ -33,9 +33,13 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - name: debug
         env:
-          HAS: fromJSON(steps.check_permissions.outputs.data).permissions.push == true
+          FULL: ${{ steps.check-permissions.data }}
+          HAS: ${{ fromJSON(steps.check-permissions.outputs.data).permissions.push == true }}
         shell: bash
-        run: echo "has permission $HAS"
+        run: |
+          echo "has permission $HAS"
+          echo "$FULL"
+
   deploy:
     needs: [check-permissions]
     if: |
